@@ -50,13 +50,13 @@ def monadtall_config(x):
     return no_xinerama(pytest.mark.parametrize("manager", [MonadTallConfig], indirect=True)(x))
 
 
-class MonadTallNewAtCurrent1Config(Config):
+class MonadTallNewAtCurrentConfig(Config):
     auto_fullscreen = True
     groups = [
         libqtile.config.Group("a")
     ]
     layouts = [
-        layout.MonadTall(new_at_current=1)
+        layout.MonadTall(new_at_current=True)
     ]
     floating_layout = libqtile.resources.default_config.floating_layout
     keys = []
@@ -65,17 +65,17 @@ class MonadTallNewAtCurrent1Config(Config):
     follow_mouse_focus = False
 
 
-def monadtallnewatcurrent1_config(x):
-    return no_xinerama(pytest.mark.parametrize("manager", [MonadTallNewAtCurrent1Config], indirect=True)(x))
+def monadtallnewatcurrent_config(x):
+    return no_xinerama(pytest.mark.parametrize("manager", [MonadTallNewAtCurrentConfig], indirect=True)(x))
 
 
-class MonadTallNewAtCurrent2Config(Config):
+class MonadTallNewCLientPositionMixKeyConfig(Config):
     auto_fullscreen = True
     groups = [
         libqtile.config.Group("a")
     ]
     layouts = [
-        layout.MonadTall(new_at_current=2)
+        layout.MonadTall(new_at_current=True, new_client_position="after_current")
     ]
     floating_layout = libqtile.resources.default_config.floating_layout
     keys = []
@@ -84,8 +84,27 @@ class MonadTallNewAtCurrent2Config(Config):
     follow_mouse_focus = False
 
 
-def monadtallnewatcurrent2_config(x):
-    return no_xinerama(pytest.mark.parametrize("manager", [MonadTallNewAtCurrent2Config], indirect=True)(x))
+def monadtallnewclientpositionmixkey_config(x):
+    return no_xinerama(pytest.mark.parametrize("manager", [MonadTallNewCLientPositionMixKeyConfig], indirect=True)(x))
+
+
+class MonadTallNewCLientPositionBottomConfig(Config):
+    auto_fullscreen = True
+    groups = [
+        libqtile.config.Group("a")
+    ]
+    layouts = [
+        layout.MonadTall(new_client_position="bottom")
+    ]
+    floating_layout = libqtile.resources.default_config.floating_layout
+    keys = []
+    mouse = []
+    screens = []
+    follow_mouse_focus = False
+
+
+def monadtallnewclientpositionbottom_config(x):
+    return no_xinerama(pytest.mark.parametrize("manager", [MonadTallNewCLientPositionBottomConfig], indirect=True)(x))
 
 
 class MonadTallMarginsConfig(Config):
@@ -126,13 +145,13 @@ def monadwide_config(x):
     return no_xinerama(pytest.mark.parametrize("manager", [MonadWideConfig], indirect=True)(x))
 
 
-class MonadWideNewAtCurrent1Config(Config):
+class MonadWideNewClientPositionTopConfig(Config):
     auto_fullscreen = True
     groups = [
         libqtile.config.Group("a")
     ]
     layouts = [
-        layout.MonadWide(new_at_current=1)
+        layout.MonadWide(new_client_position="top")
     ]
     floating_layout = libqtile.resources.default_config.floating_layout
     keys = []
@@ -141,27 +160,8 @@ class MonadWideNewAtCurrent1Config(Config):
     follow_mouse_focus = False
 
 
-def monadwidenewatcurrent1_config(x):
-    return no_xinerama(pytest.mark.parametrize("manager", [MonadWideNewAtCurrent1Config], indirect=True)(x))
-
-
-class MonadWideNewAtCurrent2Config(Config):
-    auto_fullscreen = True
-    groups = [
-        libqtile.config.Group("a")
-    ]
-    layouts = [
-        layout.MonadWide(new_at_current=2)
-    ]
-    floating_layout = libqtile.resources.default_config.floating_layout
-    keys = []
-    mouse = []
-    screens = []
-    follow_mouse_focus = False
-
-
-def monadwidenewatcurrent2_config(x):
-    return no_xinerama(pytest.mark.parametrize("manager", [MonadWideNewAtCurrent2Config], indirect=True)(x))
+def monadwidenewclientpositiontop_config(x):
+    return no_xinerama(pytest.mark.parametrize("manager", [MonadWideNewClientPositionTopConfig], indirect=True)(x))
 
 
 class MonadWideMarginsConfig(Config):
@@ -205,8 +205,9 @@ def test_tall_add_clients(manager):
     assert_focused(manager, 'four')
 
 
-@monadtallnewatcurrent1_config
-def test_tall_add_clients_with_new_at_current_1_true(manager):
+@monadtallnewatcurrent_config
+def test_tall_add_clients_with_new_at_current(manager):
+    """ Test add client as if new_client_position = before_current. """
     manager.test_window('one')
     manager.test_window('two')
     manager.test_window('three')
@@ -220,8 +221,21 @@ def test_tall_add_clients_with_new_at_current_1_true(manager):
     assert_focused(manager, 'four')
 
 
-@monadtallnewatcurrent2_config
-def test_tall_add_clients_with_new_at_current_2(manager):
+@monadtallnewclientpositionmixkey_config
+def test_tall_add_clients_with_mix_key(manager):
+    manager.test_window('one')
+    manager.test_window('two')
+    manager.test_window('three')
+    manager.c.layout.previous()
+    assert_focused(manager, 'two')
+    manager.test_window('four')
+    assert manager.c.layout.info()["main"] == 'one'
+    assert manager.c.layout.info()["secondary"] == ['two', 'four', 'three']
+    assert_focused(manager, 'four')
+
+
+@monadtallnewclientpositionbottom_config
+def test_tall_add_clients_at_bottom(manager):
     manager.test_window('one')
     manager.test_window('two')
     manager.test_window('three')
@@ -230,7 +244,6 @@ def test_tall_add_clients_with_new_at_current_2(manager):
     manager.test_window('four')
     assert manager.c.layout.info()["main"] == 'one'
     assert manager.c.layout.info()["secondary"] == ['two', 'three', 'four']
-    assert_focused(manager, 'four')
 
 
 @monadwide_config
@@ -255,8 +268,8 @@ def test_wide_add_clients(manager):
     assert_focused(manager, 'four')
 
 
-@monadwidenewatcurrent1_config
-def test_wide_add_clients_new_at_current_1(manager):
+@monadwidenewclientpositiontop_config
+def test_wide_add_clients_new_client_postion_top(manager):
     manager.test_window('one')
     manager.test_window('two')
     assert manager.c.layout.info()["main"] == 'two'
@@ -272,30 +285,8 @@ def test_wide_add_clients_new_at_current_1(manager):
     assert_focused(manager, 'two')
 
     manager.test_window('four')
-    assert manager.c.layout.info()["main"] == 'three'
-    assert manager.c.layout.info()["secondary"] == ['four', 'two', 'one']
-    assert_focused(manager, 'four')
-
-
-@monadwidenewatcurrent2_config
-def test_wide_add_clients_new_at_current_2(manager):
-    manager.test_window('one')
-    manager.test_window('two')
-    assert manager.c.layout.info()["main"] == 'one'
-    assert manager.c.layout.info()["secondary"] == ['two']
-    assert_focused(manager, 'two')
-
-    manager.test_window('three')
-    assert manager.c.layout.info()["main"] == 'one'
-    assert manager.c.layout.info()["secondary"] == ['two', 'three']
-    assert_focused(manager, 'three')
-
-    manager.c.layout.previous()
-    assert_focused(manager, 'two')
-
-    manager.test_window('four')
-    assert manager.c.layout.info()["main"] == 'one'
-    assert manager.c.layout.info()["secondary"] == ['two', 'three', 'four']
+    assert manager.c.layout.info()["main"] == 'four'
+    assert manager.c.layout.info()["secondary"] == ['three', 'two', 'one']
     assert_focused(manager, 'four')
 
 
